lib_LTLIBRARIES = libkahana.la
libkahana_ladir = $(includedir)/libkahana
libkahana_la_LDFLAGS = -version-info 1:0:0
libkahana_la_SOURCES = \
				kahana.c \
				log.c \
				util.c \
				module.c \
				cmd.c \
				socket.c \
				stock.c \
				image.c \
				cipher.c \
				string.c \
				buffer.c \
				io.c \
				geo.c \
				curlw.c \
				net.c

libkahana_la_HEADERS = \
				kahana.h \
				kahana_log.h \
				kahana_util.h \
				kahana_module.h \
				kahana_cmd.h \
				kahana_socket.h \
				kahana_stock.h \
				kahana_image.h \
				kahana_cipher.h \
				kahana_string.h \
				kahana_buffer.h \
				kahana_io.h \
				kahana_geo.h \
				kahana_curlw.h \
				kahana_net.h
